--- a/Informe/bibliografia.bib
+++ b/Informe/bibliografia.bib
@@ -42,6 +42,16 @@
   year      = {2004},
 }
 
+@book{witten2005data,
+  title={Data Mining: Practical Machine Learning Tools and Techniques, Second Edition},
+  author={Witten, I.H. and Frank, E.},
+  lccn={2005043385},
+  series={The Morgan Kaufmann Series in Data Management Systems},
+  year={2005},
+  publisher={Elsevier Science}
+}
+
+
 @misc{ wiki:crest,
    author = "Wikipedia",
    title = "Crest factor --- Wikipedia{,} The Free Encyclopedia",
