--- a/Informe/TP2_DSP.tex
+++ b/Informe/TP2_DSP.tex
@@ -56,7 +56,7 @@
 
 \addbibresource{bibliografia.bib} % para importar el archivo .bib
 
-\title{\textbf{\LARGE{\textsf{DESCRIPTORES PARA ANÁLISIS AUTOMÁTICO DE MÚSICA}}}}
+\title{\textbf{\LARGE{\textsf{EXTRACCIÓN DE DESCRIPTORES PARA ANÁLISIS AUTOMÁTICO DE MÚSICA}}}}
  % defino el titulo del Paper
 
 \date{} % lo pongo vacio para que no aparezca abajo del abstract
@@ -165,7 +165,7 @@ en el campo del procesamiento automático de música.
 
 Es por eso que hoy en día existen varios métodos disponibles para estimar el tempo
 de una canción \cite{goto1997issues}. En este caso, se implementa este descriptor
-mediante el uso de la función \emph{{librosa.feature.chroma\_stft}}.
+mediante el uso de la función \emph{{librosa.beat.tempo}}.
 \subsection{Factor de cresta}
 Según \cite{ wiki:crest}{}, el factor de cresta es una manera de medir que tan
 pronunciados son los picos de una señal. Un factor de cresta igual a 1 indica
@@ -252,7 +252,7 @@ oscila entre 0 y 1.
 \label{sec: prep}
 La preparación de la señal consiste en cargar el archivo, extraer el silencio
 al principio y al final y finalmente, normalizar la señal. Dichas tareas se
-implementan mediante un script en python disponible en \ref{Prep}.
+implementan mediante un script en python disponible en el anexo B.
 
 \subsection{Visualización de la STFT}
 \label{sec: stft}
@@ -302,7 +302,7 @@ Tema 10 & 	95	  &    91 \\
 {Valores estimados y valores disponibles en la web}
 {tab: tempo}
 
-La implementación de dicho descriptor es detallada en el anexo \ref{tempo}
+La implementación de dicho descriptor es detallada en el anexo B
 \subsection{Factor de cresta}
 La tabla \ref{tab: fc} presenta los resultados obtenidos:
 \vspace{0.3 cm}
@@ -339,10 +339,11 @@ Tema 10	& 9.28	& 0.686 \\
 Notese que este descriptor es sensible frente a la técnica de normalización
 utilizada: una vez realizada la normalización, aquella señal que presenta un factor de cresta
 normalizado igual a 1, esto no implica que la señal en cuestión carezca de picos.
-\newline
-La implementación de dicho descriptor es detallada en el anexo \ref{factor de cresta}
+
+La implementación de dicho descriptor es detallada en el anexo B.
 
 \subsection{Silence Rate}
+\label{sub: Silence rate}
 La tabla \ref{tab: sr} presenta los resultados obtenidos:
 \vspace{0.3 cm}
 \tabla
@@ -375,26 +376,29 @@ Tema 10	&  0.0057 &	0.2740 \\
 {Valores estimados de Silence Rate y valores estimados de Silence Rate normalizados}
 {tab: sr}
 
-Notese que este descriptor es sensible frente a la técnica de normalización
+Se debe considerar que la técnica de normalización utilizada no es
+pertinente en el caso de dicho descriptor. Esto se debe a 2 razones. En primer
+lugar, la definición del descriptor implica que el mismo puede tomar valores entre
+0 y 1. Por otro lado, este descriptor es sensible frente a la técnica de normalización
 utilizada: una vez realizada la normalización, aquella señal que presenta un SR
 normalizado igual a 1, esto no implica que la señal en cuestión es totalmente silenciosa
 
-La implementación de dicho descriptor es detallada en el anexo \ref{silence rate}.
+La implementación de dicho descriptor es detallada en el anexo B.
 
 \subsection{Chroma Analysis}
 Las tablas \ref{tab: chroma} y \ref{tab: chroma norm} presentan los valores
 ontenidos del descriptor chroma.
-Las mismas se encuentran en el anexo \ref{anexo: chroma} debido a su gran
+Las mismas se encuentran en el anexo \ref{anexo: chroma} debido a su
 extensíon.
 
 \section{Análisis de resultados}
-% Preparacion
+
 \subsection{STFT}
 Al no estar interesado en la eficiencia computacional, se uso un hop size de 50
 muestras. El resultado de esta elección
 hace posible una reconstrucción fiel de la señal mediante la IFFT. A la vez, se
 utiliza una ventana Hamming de 2048 muestras.
-% tempo
+
 \subsection{Tempo}
 En general, se observan muy buenos resultados. En ciertos casos notables
 se encuentra que el resultado obtenido difiere de el valor esperado por un factor
@@ -408,9 +412,7 @@ esto no genera grandes inconvenientes.
 Tal como se indico previamente, el factor de cresta se ve afectado por la técnica
 de normalización utilizada. Debido a la simplicidad del computo de dicho descriptor
 no se realiza una comparación con otras implementaciones.
-% FC
-% SR
-% Chroma
+
 \subsection{Chroma Analysis}
 La tabla \ref{tono} fue obtenida en \url{https://www.audiokeychain.com}.
 Dicha web permite analizar una canción y estimar el tono de la misma.
@@ -458,12 +460,12 @@ A modo explicativo, se expone la siguiente figura:
 
 El procedimiento de inferencia utilizado para estimar el tono predominante de una
 canción a partir de su análisis chroma es el siguiente:
-Se elige  canción i y se le hace un análisis chroma. Dicho análisis esta
+Se elige la  canción i y se le hace un análisis chroma. Dicho análisis esta
 representado por la i-ésima columna de la tabla \ref{tab: chroma} o \ref{tab: chroma norm}.
-Se halla el bin con mayor indice y se lo extrapola a una nota musical mediante
+Se halla el bin con mayor valor para dicho tema y se lo extrapola a una nota musical mediante
 la figura \ref{pianito}.
 
-Dicho procedimiento de inferencia es muy simple de implementar, y podría simplificar
+Dicho procedimiento de inferencia es muy simple de implementar y podría simplificar
 aún mas la tarea de hallar el tono predominante de una canción.
 
 Los resultados de este procedimiento coinciden con la información presentada en la
@@ -482,7 +484,7 @@ para estudiar si dicho descriptor puede ser evaluado de manera subjetiva.
 \printbibliography
 \end{multicols}
 
-\newpage
+% \newpage
 
 \appendix
 \section{Resultados adicionales}
@@ -556,159 +558,160 @@ Bin 12 & 0.558 & 0.949 & 0.607 & 0.654 & 0.492 & 0.403 & 0.668 & 0.583 & 0.745 &
 {tab: chroma norm}
 
 \section{Implementaciones}
-\subsection{Preparación de la señal temporal}
-\label{Prep}
-\begin{verbatim}
-import librosa
-import numpy as np
-import matplotlib.pyplot as plt
-carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
-filename='10'
-formato='.mp3'
-filename=carpeta+filename+formato
-# cargar audio
-y, sr = librosa.load(filename)
-# extraer silencios al principio y final
-y,index=librosa.effects.trim(y, top_db=60, ref=np.amax, frame_length=2048, hop_length=50)
-# normalizar
-valor_max=np.max(y)
-y=y/valor_max
-\end{verbatim}
-\subsection{Visualización de la STFT}
-\label{stft}
-\begin{verbatim}
-import librosa
-import numpy as np
-import matplotlib.pyplot as plt
-carpeta='/Users/Fede/Desktop/'
-filename='burno mars'
-formato='.mp3'
-filename=carpeta+filename+formato
-# cargar audio
-y, sr = librosa.load(filename)
-# extraer silencios al principio y final
-y,index=librosa.effects.trim(y, top_db=60, ref=np.amax, frame_length=2048, hop_length=50)
-# normalizar
-valor_max=np.max(y)
-y=y/valor_max
-D = librosa.stft(y)
-librosa.display.specshow(librosa.amplitude_to_db(D,ref=np.max)
-,y_axis='log', x_axis='time')
-plt.title('Power spectrogram')
-plt.colorbar(format='%+2.0f dB')
-plt.tight_layout()
-plt.show()
-\end{verbatim}
-
-\subsection{Descriptor Tempo}
-\label{tempo}
-\begin{verbatim}
-import librosa
-import numpy as np
-
-carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
-filename='10'
-formato='.mp3'
-filename=carpeta+filename+formato
-# cargar audio
-y, sr = librosa.load(filename)
-# extraer silencios al principio y final
-y,index=librosa.effects.trim(y, top_db=60, ref=np.amax, frame_length=2048, hop_length=50)
-# normalizar
-valor_max=np.max(y)
-y=y/valor_max
-# calcular tempo
-hop_length = 512
-oenv = librosa.onset.onset_strength(y=y, sr=sr, hop_length=hop_length)
-tempogram = librosa.feature.tempogram(onset_envelope=oenv, sr=sr,
-                                      hop_length=hop_length)
-ac_global = librosa.autocorrelate(oenv, max_size=tempogram.shape[0])
-ac_global = librosa.util.normalize(ac_global)
-# Estimate the global tempo for display purposes
-tempo = librosa.beat.tempo(onset_envelope=oenv, sr=sr,hop_length=hop_length)[0]
-print(tempo)
-\end{verbatim}
-
-\subsection{Factor de cresta}
-\label{factor de cresta}
-\begin{verbatim}
-import librosa
-import numpy as np
-import matplotlib.pyplot as plt
-carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
-filename='10'
-formato='.mp3'
-filename=carpeta+filename+formato
-# cargar audio
-y, sr = librosa.load(filename)
-# extraer silencios al principio y final
-y,index=librosa.effects.trim(y, top_db=60, ref=np.amax, frame_length=2048, hop_length=50)
-# normalizar
-valor_max=np.max(y)
-y=y/valor_max
-# calculo el valor rms
-y_rms=y*y
-y_rms=np.sum(y_rms)
-y_rms=y_rms/len(y)
-y_rms=np.sqrt(y_rms)
-# calculo el valor maximo
-y_max=np.max(y) # siempre vale 1
-# calculo el factor de cresta
-factor_de_cresta=((y_max)/(y_rms))
-print(factor_de_cresta)
-\end{verbatim}
-
-
-\subsection{Silence Rate}
-\label{silence rate}
-\begin{verbatim}
-import librosa
-import numpy as np
-carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
-filename='9'
-formato='.mp3'
-filename=carpeta+filename+formato
-# cargar audio
-y, sr = librosa.load(filename)
-# # extraer silencios al principio y final
-# y,index=librosa.effects.trim(y, top_db=60, ref=np.amax,
-# frame_length=1024, hop_length=50)
-# normalizar
-valor_max=np.max(y)
-y=y/valor_max
-# calcular sr
-intervals=librosa.effects.split(y, top_db=60, ref=np.amax,
-frame_length=1024, hop_length=50)
-M_ns=0
-for i in range(0,intervals.shape[0]):
-    M_ns = M_ns+intervals[i,1]-intervals[i,0]
-N=len(y)
-SR=((N-M_ns)/N)
-SR=np.array([SR])
-print(SR)
-\end{verbatim}
-
-\subsection{Chroma}
-\label{chroma}
-\begin{verbatim}
-import librosa
-import numpy as np
-carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
-filename='10'
-formato='.mp3'
-filename=carpeta+filename+formato
-# cargar audio
-y, sr = librosa.load(filename)
-# extraer silencios al principio y final
-y,index=librosa.effects.trim(y, top_db=60, ref=np.amax,
-frame_length=1024, hop_length=50)
-# normalizar
-valor_max=np.max(y)
-y=y/valor_max
-# calculo el chromagram
-chromagram=librosa.feature.chroma_cqt(y,sr)
-chromagram=np.mean(chromagram,1)
-np.savetxt('test.txt',chromagram,delimiter=' \\ ',fmt='%.3f', newline=' & ')
-\end{verbatim}
+Las implementaciones desarrolladas pueden encontrarse en \emph{https://github.com/fedefelds/TP-DSP}
+% \subsection{Preparación de la señal temporal}
+% \label{Prep}
+% \begin{verbatim}
+% import librosa
+% import numpy as np
+% import matplotlib.pyplot as plt
+% carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
+% filename='10'
+% formato='.mp3'
+% filename=carpeta+filename+formato
+% # cargar audio
+% y, sr = librosa.load(filename)
+% # extraer silencios al principio y final
+% y,index=librosa.effects.trim(y, top_db=60, ref=np.amax, frame_length=2048, hop_length=50)
+% # normalizar
+% valor_max=np.max(y)
+% y=y/valor_max
+% \end{verbatim}
+% \subsection{Visualización de la STFT}
+% \label{stft}
+% \begin{verbatim}
+% import librosa
+% import numpy as np
+% import matplotlib.pyplot as plt
+% carpeta='/Users/Fede/Desktop/'
+% filename='burno mars'
+% formato='.mp3'
+% filename=carpeta+filename+formato
+% # cargar audio
+% y, sr = librosa.load(filename)
+% # extraer silencios al principio y final
+% y,index=librosa.effects.trim(y, top_db=60, ref=np.amax, frame_length=2048, hop_length=50)
+% # normalizar
+% valor_max=np.max(y)
+% y=y/valor_max
+% D = librosa.stft(y)
+% librosa.display.specshow(librosa.amplitude_to_db(D,ref=np.max)
+% ,y_axis='log', x_axis='time')
+% plt.title('Power spectrogram')
+% plt.colorbar(format='%+2.0f dB')
+% plt.tight_layout()
+% plt.show()
+% \end{verbatim}
+%
+% \subsection{Descriptor Tempo}
+% \label{tempo}
+% \begin{verbatim}
+% import librosa
+% import numpy as np
+%
+% carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
+% filename='10'
+% formato='.mp3'
+% filename=carpeta+filename+formato
+% # cargar audio
+% y, sr = librosa.load(filename)
+% # extraer silencios al principio y final
+% y,index=librosa.effects.trim(y, top_db=60, ref=np.amax, frame_length=2048, hop_length=50)
+% # normalizar
+% valor_max=np.max(y)
+% y=y/valor_max
+% # calcular tempo
+% hop_length = 512
+% oenv = librosa.onset.onset_strength(y=y, sr=sr, hop_length=hop_length)
+% tempogram = librosa.feature.tempogram(onset_envelope=oenv, sr=sr,
+%                                       hop_length=hop_length)
+% ac_global = librosa.autocorrelate(oenv, max_size=tempogram.shape[0])
+% ac_global = librosa.util.normalize(ac_global)
+% # Estimate the global tempo for display purposes
+% tempo = librosa.beat.tempo(onset_envelope=oenv, sr=sr,hop_length=hop_length)[0]
+% print(tempo)
+% \end{verbatim}
+%
+% \subsection{Factor de cresta}
+% \label{factor de cresta}
+% \begin{verbatim}
+% import librosa
+% import numpy as np
+% import matplotlib.pyplot as plt
+% carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
+% filename='10'
+% formato='.mp3'
+% filename=carpeta+filename+formato
+% # cargar audio
+% y, sr = librosa.load(filename)
+% # extraer silencios al principio y final
+% y,index=librosa.effects.trim(y, top_db=60, ref=np.amax, frame_length=2048, hop_length=50)
+% # normalizar
+% valor_max=np.max(y)
+% y=y/valor_max
+% # calculo el valor rms
+% y_rms=y*y
+% y_rms=np.sum(y_rms)
+% y_rms=y_rms/len(y)
+% y_rms=np.sqrt(y_rms)
+% # calculo el valor maximo
+% y_max=np.max(y) # siempre vale 1
+% # calculo el factor de cresta
+% factor_de_cresta=((y_max)/(y_rms))
+% print(factor_de_cresta)
+% \end{verbatim}
+%
+%
+% \subsection{Silence Rate}
+ % \label{silence rate}
+% \begin{verbatim}
+% import librosa
+% import numpy as np
+% carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
+% filename='9'
+% formato='.mp3'
+% filename=carpeta+filename+formato
+% # cargar audio
+% y, sr = librosa.load(filename)
+% # # extraer silencios al principio y final
+% # y,index=librosa.effects.trim(y, top_db=60, ref=np.amax,
+% # frame_length=1024, hop_length=50)
+% # normalizar
+% valor_max=np.max(y)
+% y=y/valor_max
+% # calcular sr
+% intervals=librosa.effects.split(y, top_db=60, ref=np.amax,
+% frame_length=1024, hop_length=50)
+% M_ns=0
+% for i in range(0,intervals.shape[0]):
+%     M_ns = M_ns+intervals[i,1]-intervals[i,0]
+% N=len(y)
+% SR=((N-M_ns)/N)
+% SR=np.array([SR])
+% print(SR)
+% \end{verbatim}
+%
+% \subsection{Chroma}
+% \label{chroma}
+% \begin{verbatim}
+% import librosa
+% import numpy as np
+% carpeta='/Users/Fede/Desktop/The Turn of a Friendly Card 1979 (GPF)/Canciones del trabajo/'
+% filename='10'
+% formato='.mp3'
+% filename=carpeta+filename+formato
+% # cargar audio
+% y, sr = librosa.load(filename)
+% # extraer silencios al principio y final
+% y,index=librosa.effects.trim(y, top_db=60, ref=np.amax,
+% frame_length=1024, hop_length=50)
+% # normalizar
+% valor_max=np.max(y)
+% y=y/valor_max
+% # calculo el chromagram
+% chromagram=librosa.feature.chroma_cqt(y,sr)
+% chromagram=np.mean(chromagram,1)
+% np.savetxt('test.txt',chromagram,delimiter=' \\ ',fmt='%.3f', newline=' & ')
+% \end{verbatim}
 
 \end{document}
